Identifier source pick lists fix and making navigation menu more readable.

--- a/public/stylesheets/wnyc/theme.css
+++ b/public/stylesheets/wnyc/theme.css
@@ -3,7 +3,7 @@
  */
 
 /* colors */
-a { color: #000; }
+a { color: #D6D6D6; }
 a:hover { color: #508bc7; }
 body { background-color: #262626; }
 
